# nira

./: Cargo.toml  README.md  architecture-blueprint-pattern.md  blueprint-template.md  nira-blueprint.md  niraprint.md
editor/: index.html
src/: blueprint.rs  main.rs  parser.rs  prompt.rs  server.rs  tasks.rs  template.rs  validator.rs
templates/: constraints-first.md  default.md  game.md  interface-driven.md  minimal.md  quick.md
