[package]
name = "nira"
version = "0.1.0"
edition = "2021"
description = "Your personal architectural control center - stay in control when using AI"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.49.0", features = ["full"] }
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
open = "5.3.3"
chrono = "0.4"
futures = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
